Fix: Card layout is floating left on smaller devices

--- a/app/views/detailsView.html
+++ b/app/views/detailsView.html
@@ -1,7 +1,7 @@
 <section class="module content no-bottom-pad bg-team">
     <div class="container-fluid">
         <div class="row">
-            <div class="panel panel-default team-panel animated fadeIn col-md-4 col-md-offset-4 box">
+            <div class="panel panel-default team-panel animated fadeIn col-md-4 col-md-offset-4 box max-400">
                 <div class="panel-body team_box_img details" id="{{ team[id].shortname }}"
                     style="{{ 'background-image: url(' + profileImagesPath + team[id].shortname + '.jpg);' }}">
                 </div>
