Modified the layout for showing reasons to love silverpush

--- a/app/views/careerView.html
+++ b/app/views/careerView.html
@@ -5,38 +5,57 @@
     </div>
 </section>
 
-<section class="module content">
-    <div class="container">
+<section class="module content secondary-font career" id="tech-div">
+    <div class="container animated bounceInUp">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="page-title animated fadeInRight">Reasons to <span class="fa fa-heart title-icon danger blinker"></span> SilverPush</div>
-                <div class="page-data animated bounceInRight">
-                    <div class="row data_bar">
-                        <div class="col-md-12">
-                            <span class="danger">Food</span><span>Our team is full of foodies</span>
-                        </div>
-                    </div>
-                    <div class="row data_bar">
-                        <div class="col-md-12">
-                            <span class="success">Technology</span><span>We believe we can solve any problem using technology, and we encourage people to automate any manual task they can</span>
-                        </div>
-                    </div>
-                    <div class="row data_bar">
-                        <div class="col-md-12">
-                            <span class="primary">Ideas</span><span>Everyone gets a chance to contribute ideas to our products</span>
-                        </div>
-                    </div>
-                    <div class="row data_bar">
-                        <div class="col-md-12">
-                            <span class="info">Growth Opportunity</span><span>We are one of the fastest growing companies, and we love people with enthusiasm and motivation to quickly grow with the company</span>
-                        </div>
-                    </div>
-                    <div class="row data_bar">
-                        <div class="col-md-12">
-                            <span class="warning">Mobile</span><span> is booming, and we’re part of it with a mobile first strategy</span>
-                        </div>
-                    </div>
-                </div>
+                <div class="page-title">Reasons to <span class="fa fa-heart title-icon danger blinker"></span> SilverPush</div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="550ms">
+                <a>
+                    <img src="img/career-img/plus/tech.svg" class="center-block" alt="">
+                    <h3>Technology</h3>
+                </a>
+                <p>We believe we can solve any problem using technology, and we encourage people to automate any manual task they can</p>
+                <hr class="hidden-md hidden-lg">
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="500ms">
+                <a>
+                    <img src="img/career-img/plus/food.svg" class="center-block" alt="">
+                    <h3>Food</h3>
+                </a>
+                <p>The whole team goes out on sumptuous buffet lunches every month. As for other times, there’s an in-house snack bar stocked with cola, wafers, crackers, chocolates – well, you get the drift!</p>
+                <hr class="hidden-md hidden-lg">
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="600ms">
+                <a>
+                    <img src="img/career-img/plus/idea.svg" class="center-block" alt="">
+                    <h3>Ideas</h3>
+                </a>
+                <p>Everyone gets a chance to contribute ideas to our products</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="600ms">
+                <a>
+                    <img src="img/career-img/plus/play.png" class="center-block" alt="">
+                    <h3>Play</h3>
+                </a>
+                <p>We love our PS3 and board games that guarantee hours of post-work (and sometimes during work!) fun</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="600ms">
+                <a>
+                    <img src="img/career-img/plus/career.png" class="center-block" alt="">
+                    <h3>Career Growth</h3>
+                </a>
+                <p>We are one of the fastest growing companies, and we love people with enthusiasm and motivation to quickly grow with the company</p>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="600ms">
+                <a>
+                    <img src="img/career-img/plus/mobile.svg" class="center-block" alt="">
+                    <h3>Mobiles</h3>
+                </a>
+                <p>Mobile is booming, and we’re part of it with a mobile first strategy</p>
             </div>
         </div>
     </div>
