Added secondary font

--- a/app/views/contactusView.html
+++ b/app/views/contactusView.html
@@ -3,7 +3,7 @@
         <h1>Contact Us</h1>
     </div>
 </section>
-<div class="container-fluid bg-contact">
+<div class="container-fluid bg-contact secondary-font">
     <div class="col-md-4">
         <ul class="list-group">
             <li class="list-group-item">&nbsp;
