--- a/app/views/investorsView.html
+++ b/app/views/investorsView.html
@@ -5,7 +5,7 @@
     </div>
 </section>
 
-<section class="module content no-bottom-pad bg-darkgrey">
+<section class="module content no-bottom-pad bg-darkgrey secondary-font investors">
     <div class="container panel-box">
         <div class="row" id="first_type">
             <legend>Funds</legend>
