--- a/app/views/targetingView.html
+++ b/app/views/targetingView.html
@@ -5,7 +5,7 @@
     </div>
 </section>
 
-<section class="module content" id="tech-div">
+<section class="module content secondary-font" id="tech-div">
     <div class="container">
        <!--  <h2>Creating Deterministic Cross Device Pairs</h2> -->
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="500ms">
