--- a/app/views/teamView.html
+++ b/app/views/teamView.html
@@ -16,7 +16,7 @@
                             <div class="bottom-box1">
                                 <p class="desc">"..{{ person.desc }}"</p>
                             </div>
-                            <div class="bottom-box2">
+                            <div class="bottom-box2 secondary-font">
                                 <a href="#!team/details/{{ team.indexOf(person) }}" class="title">{{ person.name | uppercase }}</a>
                                 <p class="pos">{{ person.position }}</p>
                                 <p class="links">
@@ -52,7 +52,7 @@
                             <div class="bottom-box1">
                                 <p class="desc">"..{{ person.desc }}"</p>
                             </div>
-                            <div class="bottom-box2">
+                            <div class="bottom-box2 secondary-font">
                                 <a href="#!team/details/{{ team.indexOf(person) }}" class="title">{{ person.name | uppercase }}</a>
                                 <p class="pos">{{ person.position }}</p>
                                 <p class="links">
