--- a/app/views/companyView.html
+++ b/app/views/companyView.html
@@ -4,7 +4,7 @@
     </div>
 </section>
 
-<section class="module content">
+<section class="module content secondary-font">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
