--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -11,7 +11,7 @@
 </section>
 
 
-<section class="module content" id="tech-div">
+<section class="module content secondary-font" id="tech-div">
     <div class="container">
         <h2>Creating Deterministic Cross Device Pairs</h2>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -45,7 +45,7 @@
         <h1>Products</h1>
     </div>
 </section>
-<section class="module content" id="product-div">
+<section class="module content secondary-font" id="product-div">
     <div class="container">
         <h2>..built upon our cross device data intelligence</h2>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
