--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -101,7 +101,7 @@
 <section class="module content no-bottom-pad bg-white">
     <div class="container-fluid">
         <h1 class="retroshadow">..In a Nutshell</h1>
-        <div class="row black-shadow">
+        <div class="row">
             <div class="info-box">
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 clr">
                     <p>50 TB</p>
