Moving inline styles in CSS file

--- a/app/views/contactusView.html
+++ b/app/views/contactusView.html
@@ -24,6 +24,6 @@
     </div>
     <div class="col-md-8">
         <div class="overlay" onClick="style.pointerEvents='none'"></div>
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=zXu3qO08Ip4k.k9ZaW52An4jc" width="100%" height="450" style="border:10px solid white;"></iframe>
+        <iframe id="maps" src="https://www.google.com/maps/d/u/0/embed?mid=zXu3qO08Ip4k.k9ZaW52An4jc" width="100%" height="450"></iframe>
     </div>
 </div>
