--- a/app/views/detailsView.html
+++ b/app/views/detailsView.html
@@ -1,22 +1,24 @@
-<section class="module content no-bottom-pad bg-team">
+<section class="module content no-bottom-pad bg-team details">
     <div class="container-fluid">
         <div class="row">
-            <div class="panel panel-default team-panel animated fadeIn col-md-4 col-md-offset-4 box max-400">
-                <div class="panel-body team_box_img details" id="{{ team[id].shortname }}"
-                    style="{{ 'background-image: url(' + profileImagesPath + team[id].shortname + '.jpg);' }}">
-                </div>
-	            <div class="detail-box1">
-        			<h2 class="name">{{ team[id].name }}</h2>
-	                <p class="desc">"..{{ team[id].desc }}"</p>
-	            </div>
-	            <div class="detail-box2">
-	                <p class="pos">{{ team[id].position }}</p>
-	                <p class="links">
-	                    <a href="{{ team[id].linkedin }}" target="_blank" class="btn btn-xs btn-info">
-	                        <span class="fa fa-linkedin"></span>
-	                    </a>
-	                </p>
-	            </div>
+            <div class="col-md-4 col-md-offset-4">
+            	<div class="panel panel-default team-panel animated fadeIn box max-400">
+	                <div class="panel-body team_box_img details" id="{{ team[id].shortname }}"
+	                    style="{{ 'background-image: url(' + profileImagesPath + team[id].shortname + '.jpg);' }}">
+	                </div>
+		            <div class="detail-box1">
+	        			<h2 class="name">{{ team[id].name }}</h2>
+		                <p class="desc secondary-font">"..{{ team[id].desc }}"</p>
+		            </div>
+		            <div class="detail-box2">
+		                <p class="pos secondary-font">{{ team[id].position }}</p>
+		                <p class="links">
+		                    <a href="{{ team[id].linkedin }}" target="_blank" class="btn btn-xs btn-info">
+		                        <span class="fa fa-linkedin"></span>
+		                    </a>
+		                </p>
+		            </div>
+            	</div>
             </div>
         </div>
     </div>
