--- a/css/style.css
+++ b/css/style.css
@@ -106,22 +106,6 @@ img.img-gs:hover {
 #header-txt p {
     font-size: 0.8em;
 }
-.title-team {
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-    font-size: 5em;
-    padding: 0 0 30px 0;
-    text-align: center;
-    text-transform: uppercase;
-    text-rendering: optimizeLegibility;
-    color: white;
-    text-align: center;
-}
-.title-team>span {
-    background-color: white;
-    color: rgb(94, 94, 94);
-    padding-left: 2em;
-    padding-right: 0.2em;
-}
 /*------------------------------------------------------------------------------*/
 /* Parallax Style */
 
@@ -357,8 +341,11 @@ h1.retroshadow {
 .bg-team {
     background-color: #f5f5f5;
 }
+.bg-team.details {
+    background-color: #FFFFFF;
+}
 .bg-contact {
-    background: #E4BD81;
+    background: rgba(226, 191, 127, 0.26);
     padding-top: 20px;
     padding-bottom: 20px;
     color: black;
@@ -412,19 +399,6 @@ h1.retroshadow {
 .txt-green {
     color: rgba(14, 121, 93, 0.90);
 }
-/*.page-data > p:hover {
-    color: rgb(5, 101, 152);
-    -webkit-transition: color 0.5s ease-in-out;
-    transition: color 0.5s ease-in-out;
-}
-.page-data > p:hover > i {
-    background: rgb(174, 174, 174);
-    color: white;
-    padding: 0 0.3em 0 0.3em;
-    border-radius: 3px;
-    -webkit-transition: color 0.5s ease-in-out;
-    transition: color 0.5s ease-in-out;
-}*/
 
 .title-icon {
     color: rgb(0, 88, 161);
@@ -838,9 +812,9 @@ section.module .row .page-title {
 .team_box_img.details {
     max-width: 300px;
     margin: 1em auto;
-    border: 4px solid #fff;
+    border: 5px solid #FCFCFC;
     border-radius: 50%;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
 .panel.panel-default.team-panel {
     border-radius: 0;
@@ -854,8 +828,13 @@ section.module .row .page-title {
     border-bottom-width: 2px;
     box-shadow: none;
 }
+
+.details .panel.panel-default.box {
+    background-color: #FEFEFE;
+}
 .box.max-400 {
     max-width: 400px;
+    margin: 0 auto;
     margin-bottom: 2em;
     text-align: center;
 }
@@ -896,7 +875,7 @@ section.module .row .page-title {
     color: white;
 }
 .bottom-box1> p.desc {
-    font-family: 'Kaushan Script', cursive;
+    font-family: 'Courgette', cursive;
     font-weight: 300;
     font-size: 1.3em;
     -webkit-transition: all 0.3s ease-out;
@@ -962,6 +941,12 @@ section.module .row .page-title {
 .detail-box2 > p.links > a {
     font-size: 1em;
     margin-bottom: 0.5em;
+}
+
+.details .detail-box2 > p.links > a {
+    border-radius: 50%;
+    font-size: 1.5em;
+    width: 1.5em;
 }
 .bottom-box2 > p.links {
     position: absolute;
