Added border below investors name

--- a/app/views/investorsView.html
+++ b/app/views/investorsView.html
@@ -70,7 +70,7 @@
                     <div class="panel panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/fabrice_grinda.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
-                            <h3>Fabrice Grinda</h3>
+                            <h3 class="bottom-border">Fabrice Grinda</h3>
                             <p>Founder & Former CEO, OLX</p>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                     <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/prashant_mehta.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
-                            <h3>Prashant Mehta</h3>
+                            <h3 class="bottom-border">Prashant Mehta</h3>
                             <p>Former CEO, Komli Media</p>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                     <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/siddharth_puri.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
-                            <h3>Siddharth Puri</h3>
+                            <h3 class="bottom-border">Siddharth Puri</h3>
                             <p>CEO, Tyroo Media</p>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                     <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/tuoc_luong.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
-                            <h3>Tuoc Luong</h3>
+                            <h3 class="bottom-border">Tuoc Luong</h3>
                             <p>Former SVP, Yahoo Search</p>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                     <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/k_ganesh.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
-                            <h3>K. Ganesh</h3>
+                            <h3 class="bottom-border">K. Ganesh</h3>
                             <p>Founder, GrowthStory</p>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                     <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/rajesh_sawhney.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
-                            <h3>Rajesh Sawhney</h3>
+                            <h3 class="bottom-border">Rajesh Sawhney</h3>
                             <p>Founder, GSF</p>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                     <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/dinesh_agarwal.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
-                            <h3>Dinesh Agarwal</h3>
+                            <h3 class="bottom-border">Dinesh Agarwal</h3>
                             <p>Founder & CEO, IndiaMart</p>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                     <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/nish_bhutani.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
-                            <h3>Nish Bhutani</h3>
+                            <h3 class="bottom-border">Nish Bhutani</h3>
                             <p>COO, Saffronart</p>
                         </div>
                     </div>
