On expanded menu there is no need to add hover effect

--- a/css/style.css
+++ b/css/style.css
@@ -1288,8 +1288,8 @@ legend {
     -o-transition: all 0.2s ease-out;
     transition: all 0.2s ease-out;
 }
-.navbar-nav>li.open,
-.navbar-nav>li:not(.open):hover {
+.navbar-collapse:not(.in) .navbar-nav>li.open,
+.navbar-collapse:not(.in) .navbar-nav>li:not(.open):hover {
     padding-bottom: 5px;
 }
 /*------------------------------------------------------------------------------*/
