Added hr separator in careers page for smaller

--- a/app/views/careerView.html
+++ b/app/views/careerView.html
@@ -33,6 +33,7 @@
                     <h3>Ideas</h3>
                 </a>
                 <p>Everyone gets a chance to contribute ideas to our products</p>
+                <hr class="hidden-md hidden-lg">
             </div>
         </div>
         <div class="row">
@@ -42,6 +43,7 @@
                     <h3>Play</h3>
                 </a>
                 <p>We love our PS3 and board games that guarantee hours of post-work (and sometimes during work!) fun</p>
+                <hr class="hidden-md hidden-lg">
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="600ms">
                 <a>
@@ -49,6 +51,7 @@
                     <h3>Career Growth</h3>
                 </a>
                 <p>We are one of the fastest growing companies, and we love people with enthusiasm and motivation to quickly grow with the company</p>
+                <hr class="hidden-md hidden-lg">
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="600ms">
                 <a>
