--- a/app/views/careerView.html
+++ b/app/views/careerView.html
@@ -64,7 +64,7 @@
     </div>
 </section>
 
-<section class="module content">
+<section class="module content career">
     <div class="container">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="page-title animated fadeIn"><span class="fa fa-angle-left title-icon default blinker"></span> Current Openings /<span class="fa fa-angle-right title-icon default blinker"></span>
